# interference

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: compile.sh  mini.env
lib/: CMakeLists.txt  counter.hpp  interference.cpp  interference.h  interference_mpi.c  interference_mpi.h  perf.cpp  perf.hpp  wrappers.w
lib/counters/: cpumanager.cpp  cpumanager.hpp
scripts/: CMakeLists.txt  interference.py
scripts/conf/: __init__.py  cosel.py  ffmk.py  miniapp.py  mvapich.py  npb.py  openmpi.py  planetaos.py  planetaos_ampi.py  taurus.py  taurus_ampi.py  taurus_mini.py  taurus_rsrv.py
scripts/manager/: __init__.py  benchmark.py  cache.py  context.py  filter.py  lib.py  machine.py  writer.py
test/: CMakeLists.txt  args.py  cpu_list_test.cpp  init_test.cpp  perf_test.cpp  run_python_tests.sh
